reparo em alguns bugs e ajuste da seçaoes contato e fases

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
   <h2 class="title">Almanaque Stritx</h2>
   <section class="aboutgame">
     <div class="gameitem">
-      <img src="img/icon.png" alt="">
+      <p class="legenda-modal3">historia</p>
+    </div>
+    <div class="gameitem">
       <p class="legenda-modal">Protagonista</p>
     </div>
     <div class="gameitem">
-      <img src="img/fundotela3.png" alt="">
       <p class="legenda-modal1">monstro</p>
     </div>
     <div class="gameitem">
-      <img src="img/fundotela3.png" alt="">
-      <p>Lorem ipsum dolor</p>
+      <p class="legenda-modal2">cenarios</p>
     </div>
   </section>
 
-  <h2 class="title">Cdastro</h2>
+  <h2 class="title">Cadastro</h2>
   <section class="cadastro" id="cadastro">
     
       <div class="container" id="container">
@@ -98,7 +98,7 @@
             <div class="overlay-panel overlay-right">
               <h1>Ola, Gamer!</h1>
               <p>Insira seus dados pessoais e comece a jornada conosco</p>
-              <button class="ghost" id="signUp">Sign Up</button>
+              <button class="ghost" id="signUp">Cadastrar</button>
             </div>
           </div>
         </div>
@@ -127,7 +127,40 @@
   <div id="modal-protagonista" class="modal-container">
     <div class="modal"> 
       <button class="close">X</button>
+      <img src="img/proto.png" alt="">
+      <div>
+      <h3>protagonista</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla minus quae repellat, deleniti voluptate a iusto molestiae quasi consequatur explicabo, quia, saepe sunt. Laborum libero perferendis molestias. Temporibus laudantium veniam quaerat veritatis, corrupti vitae ex eaque, ullam, voluptatem maxime reiciendis.</p>
+    </div>
+    </div>
+  </div>
+
+  <div id="modal-monstro" class="modal-container">
+    <div class="modal"> 
+      <button class="close">X</button>
       <img src="img/icon.png" alt="">
+      <div>
+      <h3>protagonista</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla minus quae repellat, deleniti voluptate a iusto molestiae quasi consequatur explicabo, quia, saepe sunt. Laborum libero perferendis molestias. Temporibus laudantium veniam quaerat veritatis, corrupti vitae ex eaque, ullam, voluptatem maxime reiciendis.</p>
+    </div>
+    </div>
+  </div>
+
+  <div id="modal-cenarios" class="modal-container">
+    <div class="modal"> 
+      <button class="close">X</button>
+      <img src="img/fase3.png" alt="">
+      <div>
+      <h3>protagonista</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla minus quae repellat, deleniti voluptate a iusto molestiae quasi consequatur explicabo, quia, saepe sunt. Laborum libero perferendis molestias. Temporibus laudantium veniam quaerat veritatis, corrupti vitae ex eaque, ullam, voluptatem maxime reiciendis.</p>
+    </div>
+    </div>
+  </div>
+
+  <div id="modal-historia" class="modal-container">
+    <div class="modal"> 
+      <button class="close">X</button>
+      <img src="img/fase3.png" alt="">
       <div>
       <h3>protagonista</h3>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla minus quae repellat, deleniti voluptate a iusto molestiae quasi consequatur explicabo, quia, saepe sunt. Laborum libero perferendis molestias. Temporibus laudantium veniam quaerat veritatis, corrupti vitae ex eaque, ullam, voluptatem maxime reiciendis.</p>
