adiçao do menu mobile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
   <title>Stritx</title>
 </head>
 <body>
+  <nav>
+    <div class="logo">
+        <h4>Stritx</h4>
+    </div>
+    <ul class="nav-links">
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Cadastro</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Documentação</a></li>
+        <li><a href="#">Contato</a></li>
+    </ul>
+    <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
+</nav>
+  <!--
   <header class="header">
     <a href="" class="logo">Stritx</a>
     <nav>
@@ -23,6 +41,8 @@
       </ul>
     </nav>
   </header>
+
+  -->
 
   <main class="painel">
     <div>
