atualizaçao de secao

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Cadastro</a></li>
         <li><a href="#">Sobre</a></li>
-        <li><a href="#">Documentação</a></li>
+        <li><a  target="_blank" href="https://drive.google.com/file/d/1pJWeWtjfPNrJe2ra3nb_GgZBUPSufqdk/view?usp=sharing">Documentação</a></li>
         <li><a href="#">Contato</a></li>
     </ul>
     <div class="burger">
@@ -28,32 +28,17 @@
         <div class="line3"></div>
     </div>
 </nav>
-  <!--
-  <header class="header">
-    <a href="" class="logo">Stritx</a>
-    <nav>
-      <ul class="menu">
-        <li><a href="">Inicio</a></li>
-        <li><a href="#cadastro">Cadastro</a></li>
-        <li><a href="">Sobre o Game</a></li>
-        <li><a href="">Documentação</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  -->
 
   <main class="painel">
     <div>
       <img src="img/icon.png" alt="">
     </div>
     <div>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam adipisci sed aperiam tempora animi debitis, optio nesciunt suscipit. Officia quas unde adipisci quaerat minus fugiat sed, temporibus ex voluptates atque error nostrum, modi excepturi ad cupiditate. Laboriosam ipsa impedit recusandae.</p>
-      <button>Jogue Agora</button>
+      <p>Stritx ,O game mais irrado que voce vai jogar venha se divertir com essa facinante historia e muitos misterios em uma tera pós-apocalíptica.</p>
+      <button><a target="_blank" href="https://drive.google.com/file/d/1BCFeYU3YP_EboHZBKJOCrVGjUKOMeelH/view?usp=sharing">Jogue Agora</a></button>
     </div>
   </main>
-  <h2 class="title">separador</h2>
+  <h2 class="title">Mundo, Stritx</h2>
   <section class="boxgame">
     <div>
       <img src="img/fase1.png" alt="">
